# mzed

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dioxus.toml  LICENSE  README.en.md  README.md  flake.nix  justfile  package.json  pnpm-lock.yaml
assets/: icon.icns  mdo.css
docs/: README.md  development.md
docs/review/: README.md  coding-standards.md  mzed-engineering-guide.md  performance-guide.md  product-direction.md  rust-coding-guide.md
docs/specs/: 00-overview.md  01-architecture.md  02-tech-stack.md  03-features.md  04-project-structure.md  05-zed-integration.md  06-rendering-pipeline.md  07-ipc-and-concurrency.md  08-export.md  10-settings-and-context-menu.md  11-task-view.md  12-web-serve.md  manual-test-cases.md
scripts/: check-push.sh  install.sh
src/: app.rs  cli.rs  config.rs  domain.rs  export.rs  files.rs  fuzzy.rs  instance.rs  js.rs  lib.rs  main.rs  markdown.rs  palette.rs  perf.rs  project_tabs.rs  search.rs  serve.rs  session.rs  tabs.rs  theme.rs  ui.rs  watcher.rs  zed.rs
src/app_state/: generation.rs  mod.rs  pane.rs  rename.rs
src/domain/: action.rs  navigation.rs
src/js/: dom.rs  export.rs  find.rs  keyboard.rs  mermaid.rs  render.rs
src/markdown/: alerts.rs  frontmatter.rs  post_process.rs  raw_html.rs  render.rs  security.rs  toc.rs  wikilink.rs
src/serve/: shell.rs
src/services/: file_service.rs  instance_service.rs  mod.rs  persistence.rs  platform.rs  task_scan.rs  watch_service.rs
src/ui/: command_palette.rs  find_bar.rs  sidebar.rs  (+7 more)
tests/: architecture.rs  domain_commands.rs  instance_integration.rs
(+7 files in other folders)
